// Configuration proto for File targets.
syntax = "proto2";

package cloudprober.targets.file;

import "github.com/google/cloudprober/rds/file/proto/config.proto";
import "github.com/google/cloudprober/rds/proto/rds.proto";

option go_package = "github.com/google/cloudprober/targets/file/proto";

message TargetsConf {
  // File that contains resources in either textproto or json format.
  // Example in textproto format:
  //
  // resource {
  //   name: "switch-xx-01"
  //   ip: "10.11.112.3"
  //   port: 8080
  //   labels {
  //     key: "device_type"
  //     value: "switch"
  //   }
  // }
  // resource {
  //   name: "switch-yy-01"
  //   ip: "10.16.110.12"
  //   port: 8080
  // }
  optional string file_path = 1;

  repeated .cloudprober.rds.Filter filter = 2;

  optional .cloudprober.rds.file.ProviderConfig.Format format = 3;

  // If specified, file will be re-read at the given interval.
  optional int32 re_eval_sec = 4;
}
